# master_degree

./: readme.md
driver/: DRIVER_desc.odt  docker-compose.yml  run_container.sh
driver/app/: Comm.py  GUI.py  Navi.py  main.py
driver/driver.old/: Dockerfile  docker-compose.yml  readme.md  run_container.sh
driver/dynamic/: chart.ipynb  dstarlite.py  main.py
driver/static_algo/: graph_ops.py  main.py  test.ipynb
driver/static_algo.old/: logs.txt
ppt/: Magisterka.odp  Magisterka.pptx  Prezentacja.odp
research/: experiment.ipynb  main.py  research_desc.odt
research/PID_experiment/: 4DPlot.html  experiment1_cp.ipynb  main.py  old.txt  research_desc.odt
research/genetic_algorithm_experiment/: best_solution_experiment_1_mutation.txt  best_solution_experiment_2_mutation.txt
research/speed_control_experiment.old/: best_solution_experiment_first.txt  best_solution_experiment_third.txt
robot/SW/robot_software/: CMakeLists.txt  build_test_and_run.sh
robot/SW/robot_software/include/: AdvancedOdometry.h  CommManager.h  DCMotor.h  DistanceSensor.h  Encoder.h  IMU.h  MotorManager.h  OdometryManager.h  SensorManager.h  SimpleOdometry.h  WiFiManager.h  array.h  stack.h
robot/SW/robot_software/include/interfaces/: IDCMotor.h  IOdometry.h  ISensor.h
robot/SW/robot_software/src/: DCMotor.cc  DistanceSensor.cc  Encoder.cc  IMU.cc  MotorManager.cc  OdometryManager.cc  SensorManager.cc
robot/SW/robot_software/test/: ut_array.cc  ut_motors.cc  ut_sensors.cc  ut_stack.cc
thesis/: weiiszablon.aux  weiiszablon.out  weiiszablon.sty  weiiszablon.tex  weiiszablon.toc
(+102 files in other folders)
